--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+      <header>tag header é necessária?</header>
       <section>
           <h1>Tretalândia</h1>
 
