Normalize pkg add

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-      <header>tag header é necessária?</header>
+      <header>
+              <p>tag header é necessária?</p>
+              <h1>Tretalândia</h1>
+      </header>
       <section>
           <h1>Tretalândia</h1>
-
-          <img src="http://i1076.photobucket.com/albums/w449/blasterkid2011/KISS%20FAQ/joker-batman-pool-cue-tryouts.gif">
 
            <ul>
                <li class="wrap"><a href="#" onclick="openCourse('wrap')">Wrap é sanduba</a></li>
