Index changes at header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
       <header>
-              <p>tag header é necessária?</p>
+              <p>A tag header é necessária?</p>
               <h1>Tretalândia</h1>
       </header>
       <section>
