--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
           <h1>Tretalândia</h1>
 
            <ul>
-               <li class="wrap"><a href="#" onclick="openCourse('wrap')">Wrap é sanduba</a></li>
-               <li class="mdm"><a href="#" onclick="openCourse('mdm')">Melhor do mundo</a></li>
-               <li class="axs"><a href="#" onclick="openCourse('axs')">Atom Vs. Sublime</a></li>
+               <li class="wrap"><a href="#wrap">Wrap é sanduba</a></li>
+               <li class="mdm"><a href="#mdm">Melhor do mundo</a></li>
+               <li class="axs"><a href="#axs">Atom Vs. Sublime</a></li>
+               <li class="fruits"><a href="fruits">Abacaxi é melhor</a></li>
            </ul>
            <div>
            <h2>Wrap</h2>
@@ -48,6 +49,14 @@
              <div>
                <p>Sublime, obvio</p>
              </div>
+           </div>
+           <div>
+             <h2>Abacaxi é melhor</h2>
+             <ul>
+               <li>Abacaxi é fotogenico</li>
+               <li>Abacaxi é saboroso</li>
+               <li>Melão é horrivel</li>
+             </ul>
            </div>
        </section>
 
